# claude-forge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile.forge
docs/: design.md  design_appendix.md
docs/developer/: README.md  documentation-guidelines.md  testing-guidelines.md
docs/end-user/: README.md  auth.md  configs.md  handoff.md  hooks.md  policies.md  proxies.md  sessions.md  skills.md  workflows.md
docs/proposals/: auth_ux_redesign.md  runtime_abstraction.md  workflow_model_routing.md
docs/status/: change_log.md  impl_checklist.md
scripts/: check-provider.py  count-tokens.py
src/forge/: runtime_config.py
src/forge/backend/: registry.py
src/forge/cli/: auth.py  claude.py  extensions.py  guard.py  handoff.py  logs.py  main.py  proxy.py  proxy_costs.py  session.py  session_addendum.py  session_fork.py  session_lifecycle.py  session_manage.py  status_line.py  workflow.py
src/forge/cli/hooks/: commands.py
src/forge/config/: loader.py  schema.py
src/forge/core/: logging.py
src/forge/core/auth/: __init__.py  capabilities.py  secrets.py  template_secrets.py
src/forge/core/data/: model_catalog.yaml  pricing.yaml
src/forge/core/llm/: __init__.py  credentials.py  detection.py  errors.py  types.py
src/forge/core/models/: __init__.py  catalog.py  pricing.py  types.py
src/forge/core/ops/: session_context.py
src/forge/core/reactive/: cost_tracking.py  env.py  routing.py  session_runner.py
src/forge/core/state/: __init__.py  io.py
src/forge/core/workqueue/: queue.py
src/forge/guard/semantic/: supervisor.py
src/forge/install/: exceptions.py
src/forge/proxy/: client_adapter.py  client_factory.py  converters.py  cost_logger.py  cost_tracker.py  data_models.py  error_hints.py  metrics.py  proxies.py  proxy_identity.py  proxy_orchestrator.py  server.py  utils.py
src/forge/review/: adversarial.py  consensus.py  engine.py  models.py  routing.py
src/forge/session/: direct_model.py  handoff.py  handoff_agent.py  manager.py  models.py
src/forge/sidecar/: container.py
src/skills/consensus/: SKILL.md
src/skills/debate/: SKILL.md
src/skills/panel/: SKILL.md
src/skills/panel/resources/: synthesis.md
src/skills/qa/: SKILL.md
src/skills/qa/resources/: checklist.md
src/skills/qa/scripts/: start-container.sh
src/skills/review/: SKILL.md
src/skills/review/references/: claude-4.6.md  claude-4.7.md  gemini-3.1.md  gpt-5.5.md
src/skills/smoke-test/scripts/: smoke-test.sh
src/skills/walkthrough/resources/: checklist.md
tests/integration/cli/: conftest.py  test_claude_command_integration.py  test_session_commands_integration.py  test_workflow_integration.py
tests/integration/core/: test_auth_credential_resolution.py
tests/integration/core/llm/: test_openrouter_real.py
tests/integration/docker/: test_installer.py  test_project_identity.py  test_session_lifecycle.py  test_system_prompt_addendum.py
tests/integration/proxy/: conftest.py  test_cost_visibility_e2e.py  test_proxy_openrouter_e2e.py  test_proxy_remote_litellm_e2e.py
tests/regression/: test_bug_55_tier_override_truthiness.py  test_bug_cap_hint_key_names.py  test_bug_cap_preflight_wrong_model.py  test_bug_caps_spend_cap_regressions.py  test_bug_cross_proxy_cap_bootstrap.py  test_bug_default_bind_localhost.py  test_bug_error_detail_leak.py  test_bug_gpt5_responses_api_catalog_drift.py  test_bug_h10_provider_detection.py  test_bug_handoff_forge_root.py  test_bug_local_litellm_openai_creds.py  test_bug_m4_hyperparam_consistency.py  test_bug_minimax_reasoning_drift.py  test_bug_openai_read_pages_loop.py  test_bug_pricing_fallback_logs.py  test_bug_proxy_adapter_streaming_index_none.py  test_bug_proxy_set_atomic_write.py  test_bug_sidecar_subprocess_failopen.py  test_bug_stale_client_after_invalidation.py  test_bug_streaming_tool_index_none.py  test_bug_tool_call_args_dropped.py  test_bug_via_direct_worker_warning.py  test_bug_walkthrough_foreign_proxy_adoption.py  test_bug_workflow_model_availability_stale_proxy.py  test_removal_patching_system.py
tests/src/: test_runtime_config.py
tests/src/cli/: test_auth.py  test_claude_command.py  test_extension_enable.py  test_guard_supervisor.py  test_handoff.py  test_logs_command.py  test_proxy_commands.py  test_proxy_costs.py  test_session_commands.py  test_session_subprocess_proxy.py  test_workflow.py  test_workflow_consensus.py  test_workflow_preflight.py
tests/src/config/: test_loader.py  test_schema.py
tests/src/core/auth/: test_capabilities.py  test_secrets.py  (+1 more)
tests/src/proxy/: conftest.py  test_converters.py  test_cost_logger.py  test_cost_tracker.py  test_metrics_integration.py  test_model_alternatives.py  test_model_spec.py  test_proxy_identity.py  test_proxy_logging.py  test_proxy_orchestrator.py  test_routing_invariants.py
tests/src/review/: test_adversarial.py  test_consensus.py  test_engine.py  test_models.py  test_routing.py  test_skill_content.py
tests/src/session/: test_direct_model.py  test_handoff.py  test_handoff_agent.py  test_subprocess_proxy_inheritance.py
tests/src/sidecar/: test_container.py
(+55 files in other folders)
